# ChatGPT-Desktop

./: .env  .eslintrc-auto-import.json  .eslintrc.cjs  .gitignore  .prettierrc.cjs  .release-it.cjs  CHANGELOG.md  LICENSE  README-CN.md  README-ES.md  README.md  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
.github/workflows/: code-review.yml  release.yml  sync-to-gitee.yml
public/: splashscreen.html
scripts/: update.cjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  folder.rs  main.rs  tray.rs
src/api/: github.ts  index.ts  openAi.ts  request.ts
src/assets/css/: code.scss  global.scss  reset.scss  theme.scss
src/components/Avatar/: index.vue
src/components/Delete/: index.vue
src/components/Fixed/: index.vue
src/components/Function/: index.vue
src/components/Function/components/: AddSession.vue  Export.vue  HistoryDrawer.vue  SettingsModal.vue  ShortcutKey.vue  ToggleAnswer.vue  TokenUsage.vue
src/components/History/: index.vue
src/components/Icon/Language/: Es.vue
src/components/Increase/: index.vue
src/components/Input/: index.vue
src/components/Input/components/: RoleItem.vue  RoleList.vue
src/components/ReAnswer/: index.vue
src/components/Refresh/: index.vue
src/components/Session/: index.scss  index.vue
src/components/Session/components/: NoSession.vue  SessionAvatar.vue  SessionContent.vue  index.scss
src/components/Settings/: index.vue
src/components/Settings/components/: About.vue  General.vue  Modal.vue  Model.vue  ShortcutKey.vue
src/components/Theme/: index.vue
src/components/Update/: index.vue
src/constants/: index.ts  shared.ts  store.ts
src/hooks/: index.ts  useDisableShortcuts.ts  useInit.ts  useModalStyle.ts  useMutationObserver.ts  useObserverLink.ts  useShortcuts.ts
src/locales/: en.json  es.json  zh.json
src/sqls/: index.ts  role.sql
src/stores/: apiKey.ts  fixed.ts  index.ts  record.ts  role.ts  session.ts  settings.ts  shortcutKey.ts  theme.ts  uuid.ts
src/types/: declare.d.ts  index.d.ts  shared.d.ts  sql.d.ts
src/utils/: copy.ts  copyCode.ts  dayjs.ts  getMessage.ts  i18n.ts  index.ts  keyMap.ts  openai.ts  saveImage.ts  saveMarkdown.ts  shared.ts  tauri.ts  updater.ts
